# sage

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
fizz/: cli.py  config.py  main.py  timer.py  utils.py
sage/: cli.py  clocks.py  common.py  config.py  stopwatch.py  timer.py  timers.py
sage/cli/: create.py  delete.py  list.py  main.py  rename.py  stopwatch.py  timer.py  update.py
sage/clocks/: .timer.py.swp  clock.py  constants.py  renderer.py  resize.py  stopwatch.py  timer.py
sage/common/: constants.py  conversions.py  convert.py  decorators.py  format.py  formatting.py
sage/config/: audio.py  presets.py  sounds.py
tests/: conftest.py
tests/functional/: test_cli.py  test_create.py  test_fizz_cli.py  test_timer.py  test_update.py
tests/unit/: test_common.py  test_config.py  test_timer.py
tests/unit/common/: test_conversions.py  test_convert.py  test_formatting.py
tests/unit/config/: test_presets.py
