[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "sage"
dynamic = ["version"]
description = "A clean and easy-to-use CLI timer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.2.1", "nava>=0.7", "platformdirs>=4.3.8"]

[project.scripts]
sage = "sage.cli.main:sage"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"
